hphp/test/zend/bad/ext/dom/tests/DOMDocument_loadHTMLfile_variation2.php
<?php
$doc = new DOMDocument();
$result = $doc->loadHTMLFile(dirname(__FILE__) . "/not_well.html");
assert('$result === true');
?>
